[gd_scene load_steps=4 format=3 uid="uid://dysjvo3gsiwfg"]

[ext_resource type="Script" path="res://Michael WIP/Scripts/UIScripts/BattleHeroPanel.gd" id="1_8pbgx"]
[ext_resource type="Texture2D" uid="uid://kjhjksp483uo" path="res://Michael WIP/MikeCrushSheet.png" id="3_sirx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nm2ik"]
size = Vector2(48, 48)

[node name="UIBattleSpace" type="Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
size_flags_vertical = 4
mouse_filter = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_8pbgx")
metadata/_edit_group_ = true

[node name="UIParent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
mouse_filter = 2

[node name="Back_Panel" type="Panel" parent="UIParent"]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
mouse_filter = 2
metadata/_edit_group_ = true

[node name="NinePatchRectBack" type="NinePatchRect" parent="UIParent/Back_Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
texture = ExtResource("3_sirx5")
region_rect = Rect2(70, 68, 54, 54)

[node name="Front_Panel" type="Panel" parent="UIParent"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
mouse_filter = 2
metadata/_edit_group_ = true

[node name="NinePatchRectFront" type="NinePatchRect" parent="UIParent/Front_Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)
texture = ExtResource("3_sirx5")
region_rect = Rect2(68, 4, 24, 24)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Area2D" type="Area2D" parent="UIParent/Front_Panel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UIParent/Front_Panel/Area2D"]
position = Vector2(30, 30)
shape = SubResource("RectangleShape2D_nm2ik")
debug_color = Color(0.847059, 0, 0.901961, 0.419608)

[node name="UI_button" type="AkEvent2D" parent="."]
event = {
"id": 43599987,
"name": "Play_UI_button"
}

[connection signal="mouse_entered" from="UIParent/Front_Panel/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UIParent/Front_Panel/Area2D" to="." method="_on_area_2d_mouse_exited"]
